@@ -1,40 +1,64 @@
 package mls.sho.mplace.controller;
 
+import lombok.RequiredArgsConstructor;
+import mls.sho.mplace.dto.PurchaseOrderDto;
+import mls.sho.mplace.service.OrderService;
 import org.springframework.web.bind.annotation.*;
 import java.util.*;
 
 @RestController
 @RequestMapping("/api/operator/sourcing")
+@RequiredArgsConstructor
 public class OperatorSourcingController {
+
+    private final OrderService orderService;
 
     @GetMapping("/po-inbox")
     public List<Map<String, Object>> getPOInbox() {
-        return List.of(
-            Map.of("id", "PO-7721", "restaurant", "Mama's Italian", "amount", 1450.00, "items", 12, "status", "Pending Review", "priority", "High"),
-            Map.of("id", "PO-7725", "restaurant", "Zen Sushi", "amount", 890.50, "items", 8, "status", "Unassigned", "priority", "Medium")
-        );
+        return orderService.getAllOrders().stream()
+            .map(po -> {
+                Map<String, Object> map = new HashMap<>();
+                map.put("id", po.id().toString());
+                map.put("restaurant", po.restaurantName());
+                map.put("amount", po.totalAmount());
+                map.put("items", po.itemCount());
+                map.put("status", po.displayStatus() != null ? po.displayStatus() : po.status());
+                map.put("priority", po.totalAmount().doubleValue() > 5000 ? "High" : "Medium");
+                return map;
+            }).toList();
     }
 
     @GetMapping("/po-review/{id}")
     public Map<String, Object> getPOReview(@PathVariable String id) {
-        return Map.of(
-            "id", id,
-            "restaurant", "Mama's Italian",
-            "items", List.of(
-                Map.of("sku", "SKU-001", "name", "Premium Flour", "qty", 50, "price", 2.50),
-                Map.of("sku", "SKU-002", "name", "Olive Oil", "qty", 10, "price", 15.00)
-            ),
-            "total", 275.00,
-            "status", "Reviewing"
-        );
+        PurchaseOrderDto po = orderService.getOrderById(UUID.fromString(id));
+        if (po == null) return Collections.emptyMap();
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("id", po.id().toString());
+        response.put("restaurant", po.restaurantName());
+        response.put("items", po.items().stream().map(item -> 
+            Map.of("sku", item.id().toString().substring(0, 8), 
+                   "name", item.productName(), 
+                   "qty", item.quantity(), 
+                   "price", item.priceAtOrder())
+        ).toList());
+        response.put("total", po.totalAmount());
+        response.put("status", po.displayStatus() != null ? po.displayStatus() : po.status());
+        return response;
     }
 
     @GetMapping("/sub-pos")
     public List<Map<String, Object>> getSubPOs() {
-        return List.of(
-            Map.of("id", "SUB-9901-A", "parentPO", "PO-7721", "supplier", "Global Foods", "status", "Dispatched", "amount", 450.20),
-            Map.of("id", "SUB-9901-B", "parentPO", "PO-7721", "supplier", "Fresh Veggies", "status", "Preparing", "amount", 120.50)
-        );
+        return orderService.getAllSubOrders().stream()
+            .map(so -> {
+                Map<String, Object> map = new HashMap<>();
+                map.put("id", so.referenceNumber());
+                map.put("parentPO", so.parentPoReference());
+                map.put("supplier", so.supplierName());
+                map.put("status", so.status());
+                map.put("amount", so.totalAmount());
+                return map;
+            }).toList();
     }
 
     @GetMapping("/sourcing-wizard/stats")
@@ -48,9 +72,15 @@ public class OperatorSourcingController {
 
     @GetMapping("/po-outbox")
     public List<Map<String, Object>> getPOOutbox() {
-        return List.of(
-            Map.of("id", "PO-OUT-001", "destination", "Supplier X", "status", "Confirmed", "sentAt", "Mar 20, 10:00"),
-            Map.of("id", "PO-OUT-002", "destination", "Supplier Y", "status", "Failed", "sentAt", "Mar 20, 11:30")
-        );
+        return orderService.getAllSubOrders().stream()
+            .map(so -> {
+                Map<String, Object> map = new HashMap<>();
+                map.put("id", so.referenceNumber());
+                map.put("destination", so.supplierName());
+                map.put("status", so.status());
+                map.put("sentAt", so.createdAt() != null ? so.createdAt().toString() : "--");
+                map.put("amount", so.totalAmount());
+                return map;
+            }).toList();
     }
 }
